--- a/Setup-SSL/client.properties
+++ b/Setup-SSL/client.properties
@@ -1,3 +1,3 @@
 security.protocol=SSL
-ssl.truststore.location=/home/gerd/ssl/kafka.client.truststore.jks
-ssl.truststore.password=clientpass
+ssl.truststore.location=/Users/joeqiao/Documents/LocalHub/kafka/kafka-security/Certs/kafka.client.truststore.jks
+ssl.truststore.password=joeclientpass
