--- a/Setup-SSL-Authentication/client-ssl-auth.properties
+++ b/Setup-SSL-Authentication/client-ssl-auth.properties
@@ -1,6 +1,6 @@
 security.protocol=SSL
-ssl.truststore.location=/home/gerd/ssl/kafka.client.truststore.jks
-ssl.truststore.password=clientpass
-ssl.keystore.location=/home/gerd/ssl/kafka.client.keystore.jks
-ssl.keystore.password=clientpass
-ssl.key.password=clientpass
+ssl.truststore.location=/Users/joeqiao/Documents/LocalHub/kafka/kafka-security/Certs/kafka.client.truststore.jks
+ssl.truststore.password=joeclientpass
+ssl.keystore.location=/Users/joeqiao/Documents/LocalHub/kafka/kafka-security/Certs/kafka.clientcert.keystore.jks
+ssl.keystore.password=joeclientpass2
+ssl.key.password=joeclientpass2
