--- a/Setup-SSL-Authentication/server.properties
+++ b/Setup-SSL-Authentication/server.properties
@@ -29,13 +29,13 @@ broker.id=0
 #   EXAMPLE:
 #     listeners = PLAINTEXT://your.host.name:9092
 listeners=PLAINTEXT://0.0.0.0:9092,SSL://0.0.0.0:9093
-advertised.listeners=PLAINTEXT://ec2-18-196-169-2.eu-central-1.compute.amazonaws.com:9092,SSL://ec2-18-196-169-2.eu-central-1.compute.amazonaws.com:9093
-zookeeper.connect=ec2-18-196-169-2.eu-central-1.compute.amazonaws.com:2181
+advertised.listeners=PLAINTEXT://localhost:9092,SSL://localhost:9093
+zookeeper.connect=localhost:2181
 
-ssl.keystore.location=/home/ubuntu/ssl/kafka.server.keystore.jks
+ssl.keystore.location=/Users/joeqiao/Documents/LocalHub/kafka/kafka-security/Certs/kafka.server.keystore.jks
 ssl.keystore.password=serversecret
 ssl.key.password=serversecret
-ssl.truststore.location=/home/ubuntu/ssl/kafka.server.truststore.jks
+ssl.truststore.location=/Users/joeqiao/Documents/LocalHub/kafka/kafka-security/Certs/kafka.server.truststore.jks
 ssl.truststore.password=serversecret
 
 ssl.client.auth=required
@@ -64,7 +64,7 @@ auto.create.topics.enable=false
 ############################# Log Basics #############################
 
 # A comma seperated list of directories under which to store log files
-log.dirs=/home/ubuntu/kafka-logs
+log.dirs=/Users/joeqiao/Documents/LocalHub/kafka/kafka_2.13-2.8.1/logs
 
 # The default number of log partitions per topic. More partitions allow greater
 # parallelism for consumption, but this will also result in more files across
