tried kerberos setup

--- a/Setup-Kerberos/krb5.conf
+++ b/Setup-Kerberos/krb5.conf
@@ -10,6 +10,6 @@
 
 [realms]
     KAFKA.SECURE = {
-      admin_server = <<KERBEROS-SERVER-PUBLIC-DNS>>
-      kdc  = <<KERBEROS-SERVER-PUBLIC-DNS>>
+      admin_server = 104.208.96.241
+      kdc  = 104.208.96.241
       }
