--- a/Setup-Kerberos/server.properties
+++ b/Setup-Kerberos/server.properties
@@ -29,8 +29,8 @@ broker.id=0
 #   EXAMPLE:
 #     listeners = PLAINTEXT://your.host.name:9092
 listeners=PLAINTEXT://0.0.0.0:9092,SSL://0.0.0.0:9093,SASL_SSL://0.0.0.0:9094
-advertised.listeners=PLAINTEXT://<<KAFKA-SERVER-PUBLIC-DNS>>:9092,SSL://<<KAFKA-SERVER-PUBLIC-DNS>>:9093,SASL_SSL://<<KAFKA-SERVER-PUBLIC-DNS>>:9094
-zookeeper.connect=<<KAFKA-SERVER-PUBLIC-DNS>>:2181
+advertised.listeners=PLAINTEXT://20.187.112.145:9092,SSL://20.187.112.145:9093,SASL_SSL://20.187.112.145:9094
+zookeeper.connect=20.187.112.145:2181
 
 sasl.enabled.mechanisms=GSSAPI
 sasl.kerberos.service.name=kafka
